--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="btn" id="startBtn">Start</div>
 <div class="message" id="message1"></div>
-  <table>
+  <table id="tableBorder">
     <tr> <td id="0"></td> <td id="1"></td> <td id="2"></td> <td id="3"></td> </tr>
   <tr> <td id="4"></td> <td id="5"></td> <td id="6"></td> <td id="7"></td> </tr>
   <tr> <td id="8"></td> <td id="9"></td> <td id="10"></td> <td id="11"></td> </tr>
